--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -511,7 +511,7 @@ nav.mobile {
 #thesis .container .left-box video{
   width: 95%;
   object-fit: contain;
-  margin: 0 32px 0 32px;
+  padding: 0 32px 0 25px;
 }
 
 #thesis h6 {
